Fixed some minor styling issues for code blocks on mobile.

--- a/css/main.sass
+++ b/css/main.sass
@@ -22,6 +22,7 @@ html
   border-top: 20px solid
   border-bottom: 20px solid
   min-height: 100%
+  overflow-x: auto
 
 .clear
   clear: both
